force-app/main/default/objects/Subscriber__c/Subscriber__c.object-meta.xml
<CustomObject>
    <description>Used by the custom Subscription Center and Marketing Cloud - This object stores the person-level details of their preference for a given Subscription. This object is owned by the Enterprise Marketing Hub and the Marketing Cloud Governance team. Any changes to this object should be approved/reviewed by them.</description>
    <label>Subscriber</label>
    <nameField>
        <displayFormat>SUB-{00000000}</displayFormat>
        <label>Subscriber ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>