force-app/main/default/objects/Subscriber__c/fields/Apex_Owner_Should_Be__c.field-meta.xml
<CustomField>
    <fullName>Apex_Owner_Should_Be__c</fullName>
    <description>On 12/11/17, per conversation with Dawn and Jana, Joy removed the following:
IF(LEFT(Subscription__r.OwnerId,3) = "00G" &amp;&amp; Apex_Private_in_Salesforce_Should_Be__c = "True", Subscription__r.OwnerId, OwnerId)</description>
    <formula>Subscription__r.OwnerId</formula>
    <inlineHelpText>For the Apex code that enforces the Subscriber security model, this field displays the ID that should exist for the Owner.</inlineHelpText>
    <label>Apex: Owner Should Be</label>
    <type>Text</type>
</CustomField>