force-app/main/default/objects/Subscriber__c/fields/Apex_Private_in_Salesforce_Should_Be__c.field-meta.xml
<CustomField>
    <fullName>Apex_Private_in_Salesforce_Should_Be__c</fullName>
    <formula>IF(Subscription__r.Subscriber_Private_in_Salesforce__c, "True", "False")</formula>
    <inlineHelpText>For the Apex code that enforces the Subscriber security model, this field displays how the "Private in Salesforce" field should be set.</inlineHelpText>
    <label>Apex: Private in Salesforce Should Be</label>
    <type>Text</type>
</CustomField>