force-app/main/default/objects/Subscriber__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <formula>CASESAFEID(Contact__r.Id)</formula>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>