force-app/main/default/objects/Subscriber__c/fields/Contact_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Contact_Opt_out__c</fullName>
    <description>If Contact has opted out of email on their Contact Record.</description>
    <formula>Contact__r.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, Contact has globally opted out of email on their Contact record.</inlineHelpText>
    <label>Contact Opt out</label>
    <type>Checkbox</type>
</CustomField>