force-app/main/default/objects/Subscriber__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>IF(ISBLANK(Contact__r.Email), Lead__r.Email, Contact__r.Email)</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>