force-app/main/default/objects/Subscriber__c/fields/HashSubscriberId__c.field-meta.xml
<CustomField>
    <fullName>HashSubscriberId__c</fullName>
    <description>A hashed version of the ID to act as a unique and secret identifier.</description>
    <externalId>true</externalId>
    <label>HashSubscriberId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>