force-app/main/default/objects/Subscriber__c/fields/Last_Subscribed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Subscribed_Date__c</fullName>
    <label>Last Subscribed Date</label>
    <type>Date</type>
</CustomField>