force-app/main/default/objects/Subscriber__c/fields/Last_Unsubscribed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Unsubscribed_Date__c</fullName>
    <label>Last Unsubscribed Date</label>
    <type>Date</type>
</CustomField>