force-app/main/default/objects/Subscriber__c/fields/Lead_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Lead_Opt_Out__c</fullName>
    <description>If Lead has Opted out of Email on their Lead Record</description>
    <formula>Lead__r.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, Lead has globally opted out of email on their Lead record.</inlineHelpText>
    <label>Lead Opt Out</label>
    <type>Checkbox</type>
</CustomField>