force-app/main/default/objects/Subscriber__c/fields/Private_in_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Private_in_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically checked if the associated Subscription record is marked as Private in Salesforce.</inlineHelpText>
    <label>Private in Salesforce</label>
    <type>Checkbox</type>
</CustomField>