force-app/main/default/objects/Subscriber__c/fields/Sub_Center_Manage_Link__c.field-meta.xml
<CustomField>
    <fullName>Sub_Center_Manage_Link__c</fullName>
    <description>Link to match MC when user clicks on it</description>
    <formula>HYPERLINK('https://asu.secure.force.com/SubscriptionCenter?SubscriberKey='&amp;
IF(ISBLANK( Contact_ID__c ),  Lead__r.HashLeadId__c ,  Contact__r.HashContactID__c  )
, 'Manage Subs Link')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This link is used for testing to view subscription center that is visible to the subscriber.</inlineHelpText>
    <label>Subscription Center Manage Link</label>
    <type>Text</type>
</CustomField>