force-app/main/default/objects/Subscriber__c/fields/Sub_Center_Unsub_Link__c.field-meta.xml
<CustomField>
    <fullName>Sub_Center_Unsub_Link__c</fullName>
    <description>Link to match MC when user clicks on it</description>
    <formula>HYPERLINK('https://asu.secure.force.com/SubscriptionCenter?Subscriberkey='&amp;IF(ISBLANK( Contact_ID__c ),  Lead__r.HashLeadId__c ,  Contact__r.HashContactID__c  )&amp;'&amp;Subscriptionid='&amp; Subscription__r.HashSubscriptionId__c &amp;'&amp;action=unsubscribe', 'Direct Unsubscribe Link')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This link is used for testing to view One Click Unsubsribe page that is visible to the subscriber.</inlineHelpText>
    <label>Subscription Center Unsub Link</label>
    <type>Text</type>
</CustomField>