force-app/main/default/objects/Subscriber__c/fields/Subscriber_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Status__c</fullName>
    <description>Subscribed - this Lead or Contact has explicitly opted in
Unsubscribed - this Lead or Contact has explicitly opted out
No Preference -  this Lead or Contact is associated with the subscription, and should only be sSubscribed - this individual has explicitly opted in
Unsubscribed - this individual has explicitly opted out
No Preference -  this individual should only be sent messages if they are opted in to a parent Business Unitent messages if they have opted in to a parent Business Unit</description>
    <inlineHelpText>Subscribed - this individual has explicitly opted in
Unsubscribed - this individual has explicitly opted out
No Preference -  this individual should only be sent messages if they are opted in to a parent Business Unit</inlineHelpText>
    <label>Subscriber Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
                <default>true</default>
                <label>No Preference</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>