force-app/main/default/objects/Subscriber__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Subscribers</relationshipLabel>
    <relationshipName>Subscribers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>