force-app/main/default/objects/Subscriber__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>populated by a workflow, Subscription &amp; Contact or Lead ID, and used to upsert records to enforce uniqueness so that a person can have only one Subscriber record on this Subscription</inlineHelpText>
    <label>Unique Key</label>
    <length>37</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>