force-app/main/default/objects/Subscriber__c/validationRules/Lead_or_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_or_Contact_Required</fullName>
    <active>true</active>
    <description>must have a Lead or Contact (never both)</description>
    <errorConditionFormula>(ISBLANK(Contact__c) &amp;&amp; ISBLANK(Lead__c))
||
(!ISBLANK(Contact__c) &amp;&amp; !ISBLANK(Lead__c))</errorConditionFormula>
    <errorMessage>Subscriber records must have either a Contact or Lead specified</errorMessage>
</ValidationRule>