force-app/main/default/objects/Subscriber__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subscription__c</columns>
    <columns>Private_in_Salesforce__c</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <columns>Lead__c</columns>
    <columns>Subscriber_Status__c</columns>
    <columns>Unique_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>