force-app/main/default/objects/Subscriber__c/listViews/MC_Alumni_Partner_Subscriber.listView-meta.xml
<ListView>
    <fullName>MC_Alumni_Partner_Subscriber</fullName>
    <filterScope>Queue</filterScope>
    <label>MC: Alumni Partner</label>
    <queue>MC_Alumni_Partner</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>