force-app/main/default/objects/Subscriber__c/listViews/MC_ASU_Alumni_Subscriber.listView-meta.xml
<ListView>
    <fullName>MC_ASU_Alumni_Subscriber</fullName>
    <filterScope>Queue</filterScope>
    <label>MC: ASU Alumni</label>
    <queue>MC_ASU_Alumni</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>