force-app/main/default/objects/Subscriber__c/listViews/MC_ASU_Enterprise_Marketing_Hub_Subscriber.listView-meta.xml
<ListView>
    <fullName>MC_ASU_Enterprise_Marketing_Hub_Subscriber</fullName>
    <filterScope>Queue</filterScope>
    <label>MC: ASU Enterprise Marketing Hub</label>
    <queue>MC_ASU_Enterprise_Marketing_Hub</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>