force-app/main/default/objects/Subscriber__c/listViews/MC_ASU_Marketing_Academy_Subscriber.listView-meta.xml
<ListView>
    <fullName>MC_ASU_Marketing_Academy_Subscriber</fullName>
    <filterScope>Queue</filterScope>
    <label>MC: ASU Marketing Academy</label>
    <queue>MC_ASU_Marketing_Academy</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>