force-app/main/default/objects/Subscriber__c/listViews/MC_Future_Student_Communications_Subscriber.listView-meta.xml
<ListView>
    <fullName>MC_Future_Student_Communications_Subscriber</fullName>
    <filterScope>Queue</filterScope>
    <label>MC: Future Student Communications</label>
    <queue>MC_Future_Student_Communications</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>